--- a/src/styles.css
+++ b/src/styles.css
@@ -2,6 +2,30 @@
 
 @import '~@angular/material/core/theming/prebuilt/indigo-pink.css';
 
+body {
+  font-family: "Roboto";
+}
+
+h2 {
+  font-size: 3.56rem;
+  font-weight: 400;
+}
+
+h3 {
+  font-size: 2.92rem;
+  font-weight: 400;
+}
+
+h4 {
+  font-size: 2.28rem;
+  font-weight: 400;
+}
+
+h5 {
+  font-size: 1.64rem;
+  font-weight: 400;
+}
+
 .z-depth-1 {
   box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 1px 5px 0 rgba(0, 0, 0, 0.12), 0 3px 1px -2px rgba(0, 0, 0, 0.2);
 }
@@ -26,13 +50,37 @@
   box-shadow: 0 16px 24px 2px rgba(0, 0, 0, 0.14), 0 6px 30px 5px rgba(0, 0, 0, 0.12), 0 8px 10px -5px rgba(0, 0, 0, 0.3);
 }
 
-.margin-75 {
-  margin: 75px;
+.site-margin-50 {
+  margin-left: 50px;
+  margin-right: 50px;
+  margin-bottom: 50px;
 }
 
+.margin-top-20 {
+  margin-top: 5px;
+}
 .responsive-img {
   height: auto;
   width: 100%;
+}
+.center-align {
+  text-align: center;
+}
+.left-align {
+  text-align: left;
+}
+.right-align {
+  text-align: right;
+}
+.primary-color {
+  color: #3F51B5;
+}
+.accent-color {
+  color: #FF4081;
+}
+
+.font-size-14 {
+  font-size: 14pt;
 }
 /*<button style="background-color: #FF4081; color: white" class="z-depth-5" md-button> Making </button>
 <button style="background-color: #FFC107; color: white" class="z-depth-4" md-button> Pretty </button>
