--- a/src/styles.css
+++ b/src/styles.css
@@ -82,6 +82,22 @@ h5 {
 .font-size-14 {
   font-size: 14pt;
 }
+.breadcrumb-margin {
+  margin-top: 50px;
+  margin-left: 50px;
+  margin-right: 0px;
+  margin-bottom: 0px;
+}
+.margin-top-0 {
+  margin-top: 0px;
+}
+.card-container {
+  display: flex;
+  flex-flow: row wrap;
+}
+.social-image-styling {
+  margin: 10px;
+}
 /*<button style="background-color: #FF4081; color: white" class="z-depth-5" md-button> Making </button>
 <button style="background-color: #FFC107; color: white" class="z-depth-4" md-button> Pretty </button>
 <button style="background-color: #4CAF50; color: white" class="z-depth-3" md-button> Buttons </button>
